--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div data-modal class="modal">
             <form method="dialog">
-               !<div class="title">
+               <div class="title">
                     <label for="title">Enter Book Title</label>
                     <input autofocus id="title" type="text">
                 </div>
