--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p class="icon-card-account-details-outline"></p>
             </div>
             <p> <img src="icons/21099099731678690575.svg" alt=""></p>
-            <p class="add-book"><button data-open-modal>Add Book</button></p>
+            <p ><button class="addBook" data-open-modal>Add Book</button></p>
         </div>
         <div data-modal class="modal">
             <form method="dialog">
